# impac

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  b.sh  comp.sh  r.sh
docs/: index.html
impac site/: index.html
src/: CMakeLists.txt  impac.cpp  region.hpp  show  show.cpp  simple_packer.cpp  simple_packer.hpp  sprite.cpp  sprite.hpp  sprite_sheet.cpp  sprite_sheet.hpp
src/pack/: first_fit.cpp  first_fit.hpp  first_fit_v2.cpp  first_fit_v2.hpp
src/packer/: region.hpp  simple.cpp  simple.hpp
test/: test_pack_first_fit.cpp  test_sprite.cpp  test_sprite_sheet.cpp
